// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clicking on other tabs renders correct content and style 1`] = `
.c0 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: rgba(255,255,255,0.05);
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c3 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: transparent;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c7 {
  box-sizing: border-box;
  padding: 8px;
  background-color: rgba(255,255,255,0.05);
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c1 {
  display: flex;
}

.c2 {
  overflow-x: auto;
  white-space: nowrap;
}

.c2::-webkit-scrollbar-track {
  background: rgba(255,255,255,0.05);
}

.c6 {
  opacity: 1;
  color: inherit;
  border: none;
}

.c6:hover,
.c6:focus {
  cursor: pointer;
  opacity: 1;
}

.c4 {
  opacity: 0.6;
  color: inherit;
  border: none;
}

.c4:hover,
.c4:focus {
  cursor: pointer;
  opacity: 1;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c0 c1 c2"
    >
      <button
        class="c3 c4"
      >
        tab one
      </button>
      <button
        class="c5 c6"
      >
        tab two
      </button>
    </div>
    <div
      class="c7"
    >
      <div>
        content 2
      </div>
    </div>
  </div>
</div>
`;

exports[`init tab highlight and content 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: rgba(255,255,255,0.05);
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c5 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: transparent;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c7 {
  box-sizing: border-box;
  padding: 8px;
  background-color: rgba(255,255,255,0.05);
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c1 {
  display: flex;
}

.c2 {
  overflow-x: auto;
  white-space: nowrap;
}

.c2::-webkit-scrollbar-track {
  background: rgba(255,255,255,0.05);
}

.c4 {
  opacity: 1;
  color: inherit;
  border: none;
}

.c4:hover,
.c4:focus {
  cursor: pointer;
  opacity: 1;
}

.c6 {
  opacity: 0.6;
  color: inherit;
  border: none;
}

.c6:hover,
.c6:focus {
  cursor: pointer;
  opacity: 1;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c0 c1 c2"
    >
      <button
        class="c3 c4"
      >
        tab one
      </button>
      <button
        class="c5 c6"
      >
        tab two
      </button>
    </div>
    <div
      class="c7"
    >
      <div>
        content 1
      </div>
    </div>
  </div>
</div>
`;
